# mailkite-python

./: README.md  pyproject.toml
docs/: addListContacts.md  agent.md  checkDomainAvailability.md  createBroadcast.md  createDomain.md  createList.md  createRoute.md  createTemplate.md  decrypt.md  deleteBroadcast.md  deleteDomain.md  deleteList.md  deleteWebhook.md  encrypt.md  getBroadcast.md  getDomain.md  getList.md  getMessage.md  getTemplate.md  listBaseTemplates.md  listBroadcasts.md  listDomains.md  listListContacts.md  listLists.md  listMessages.md  listRoutes.md  listTemplates.md  registerDomain.md  removeListContact.md  replyBlockSender.md  replyDrop.md  replyOk.md  replySpam.md  retryDelivery.md  route.md  semanticSearch.md  send.md  sendBroadcast.md  setWebhook.md  testWebhook.md  (+5 more)
examples/: 01_send_email.py  02_receive_webhook.py  03_agent_email_reply.py  04_give_your_agent_an_inbox.py  05_server_login.py  README.md
mailkite/: __init__.py
tests/: test_sdk.py
